--- a/Apps/CocoaPods-FCM/Podfile
+++ b/Apps/CocoaPods-FCM/Podfile
@@ -10,6 +10,7 @@ target 'test cocoapods' do
   pod 'CustomerIOMessagingPush', :path => sdk_local_path    
   pod 'CustomerIOMessagingInApp', :path => sdk_local_path
   pod 'CustomerIOMessagingPushFCM', :path => sdk_local_path
+  pod 'CustomerIODataPipelines', :path => sdk_local_path
 
   # Adding APN for internal testing, only. Code from this pod is not used at runtime. 
   # We need to confirm that cocoapods customers can compile their apps with this pod installed. 
