ci: disable CI status checks that we are letting fail during CDP development
During CDP development, we have been OK with letting some of the CI status checks fail before we merge a PR. Instead of merging with some status checks be red (fail), this change disables CI running the checks that we currently let fail. This way, we can get back in the habit of not merging a PR until all CI status checks are green. Making it less likely we will break the main-cdp branch by accident.

commit-id:d76a834d

--- a/.github/workflows/build-sample-apps.yml
+++ b/.github/workflows/build-sample-apps.yml
@@ -54,13 +54,17 @@ jobs:
         sample-app: 
         # List all sample apps you want to have compiled. 
         # List item is name of directory inside of "Apps" directory for the corresponding app to compile. 
-        - "CocoaPods-FCM"
+
+  # Note: During CDP development, we have allowed the cocoapods app to fail to build.
+  # When we get it fixed, uncomment this line to make the CI build it again. 
+
+        #- "CocoaPods-FCM"
         - "APN-UIKit"
         include: # Add additional variables to each sample app build: https://docs.github.com/en/actions/using-workflows/workflow-syntax-for-github-actions#jobsjob_idstrategymatrixinclude
           - sample-app: "APN-UIKit"
             apn-or-fcm: APN
-          - sample-app: "CocoaPods-FCM"
-            apn-or-fcm: FCM
+          # - sample-app: "CocoaPods-FCM"
+          #   apn-or-fcm: FCM
 
     runs-on: macos-13
     name: Building app...${{ matrix.sample-app }}
