--- a/.github/workflows/push-datapipeline-pods.yml
+++ b/.github/workflows/push-datapipeline-pods.yml
@@ -2,22 +2,28 @@ name: PushDP
 
 on: 
   push:
-    branches: [aman/migration-cocoapods]
+    branches: 
+      - aman/migration-cocoapods
 
 jobs:
-    name: Deploy-DP-to-Cocoapods
+  Deploy-DP-to-Cocoapods: # This is the job ID, which was missing
+    name: Deploy DP to Cocoapods
+    runs-on: macos-13
     env:
       COCOAPODS_TRUNK_TOKEN: ${{ secrets.COCOAPODS_TRUNK_TOKEN }}
-    runs-on: macos-13
     steps:
+      - uses: actions/checkout@v3 # Ensures your repository is checked out to run scripts
+
       - uses: ./.github/actions/setup-ios
 
       - name: Install cocoapods
         run: gem install cocoapods
+
       - name: '⚠️ Note: Pushing to cocoapods is flaky. If you see some errors in these logs while deploying, re-run this GitHub Action to try deployment again and it might fix the issue.'
         run: echo ''
+        
       - name: Push CustomerIODataPipelines
         run: ./scripts/push-cocoapod.sh CustomerIODataPipelines.podspec
+
       - name: Push CustomerIOTrackingMigration
         run: ./scripts/push-cocoapod.sh CustomerIOTrackingMigration.podspec
-
