--- a/.github/workflows/push-datapipeline-pods.yml
+++ b/.github/workflows/push-datapipeline-pods.yml
@@ -22,8 +22,8 @@ jobs:
       - name: '⚠️ Note: Pushing to cocoapods is flaky. If you see some errors in these logs while deploying, re-run this GitHub Action to try deployment again and it might fix the issue.'
         run: echo ''
         
-      - name: Push CustomerIODataPipelines
-        run: ./scripts/push-cocoapod.sh CustomerIODataPipelines.podspec
+      - name: Push CustomerIOCommon
+        run: ./scripts/push-cocoapod.sh CustomerIOCommon.podspec
 
       - name: Push CustomerIOTrackingMigration
         run: ./scripts/push-cocoapod.sh CustomerIOTrackingMigration.podspec
