--- a/Apps/CocoaPods-FCM/Podfile
+++ b/Apps/CocoaPods-FCM/Podfile
@@ -14,6 +14,7 @@ target 'test cocoapods' do
   # Adding APN for internal testing, only. Code from this pod is not used at runtime. 
   # We need to confirm that cocoapods customers can compile their apps with this pod installed. 
   pod 'CustomerIOMessagingPushAPN', :path => sdk_local_path
+  pod 'CustomerIOTrackingMigration', :path => sdk_local_path
 
   # The "CustomerIOMessagingPushFCM" SDK installs the FCM SDK for you, defaulting to the latest version. 
   # If your app needs to use a specific version of the FCM SDK, you can add the line below to your app's Podfile 
