push builds to public group

--- a/.github/workflows/build-sample-apps.yml
+++ b/.github/workflows/build-sample-apps.yml
@@ -68,23 +68,25 @@ jobs:
     - uses: actions/checkout@v4
 
     - name: Set Default Firebase Distribution Groups
+      shell: bash
+      env:
+        # Distribution group constants
+        ALL_BUILDS_GROUP: all-builds
+        FEATURE_BUILDS_GROUP: feature-branch
+        RELEASE_BUILDS_GROUP: public
+        STABLE_BUILDS_GROUP: next
+        # Input variables
+        IS_PRIMARY_APP: ${{ matrix.apn-or-fcm == 'APN' }}
+        CURRENT_BRANCH: ${{ github.ref }}
       run: |
-        # Define all the possible distribution groups
-        ALL_BUILDS_GROUP="all-builds"
-        FEATURE_BUILDS_GROUP="feature-branch"
-        STABLE_BUILDS_GROUP="next"
-
         # Initialize with the default distribution group
         distribution_groups=("$ALL_BUILDS_GROUP")
 
-        # Determine current app type and Git context
-        is_primary_app=$([[ "${{ matrix.apn-or-fcm }}" == "APN" ]] && echo "true" || echo "false")
-        current_branch="${GITHUB_REF}"
-
         # Append distribution groups based on branch and context if the app is primary
-        if [[ "$is_primary_app" == "true" ]]; then
-          [[ "$current_branch" == "refs/heads/feature/"* ]] && distribution_groups+=("$FEATURE_BUILDS_GROUP")
-          [[ "$current_branch" == "refs/heads/main" ]] && distribution_groups+=("$STABLE_BUILDS_GROUP")
+        if [[ "$IS_PRIMARY_APP" == "true" ]]; then
+          [[ "$CURRENT_BRANCH" == "refs/heads/feature/"* ]] && distribution_groups+=("$FEATURE_BUILDS_GROUP")
+          [[ "$CURRENT_BRANCH" == "refs/heads/main" ]] && distribution_groups+=("$STABLE_BUILDS_GROUP")
+          [[ "$CURRENT_BRANCH" == "refs/heads/main" ]] && distribution_groups+=("$RELEASE_BUILDS_GROUP")
         fi
 
         # Export the groups as an environment variable
