--- a/.github/workflows/build-sample-apps.yml
+++ b/.github/workflows/build-sample-apps.yml
@@ -67,6 +67,31 @@ jobs:
     steps:
     - uses: actions/checkout@v4
 
+    - name: Set Default Firebase Distribution Groups
+      shell: bash
+      env:
+        # Distribution group constants
+        ALL_BUILDS_GROUP: all-builds
+        FEATURE_BUILDS_GROUP: feature-branch
+        NEXT_BUILDS_GROUP: next
+        PUBLIC_BUILDS_GROUP: public
+        # Input variables
+        IS_PRIMARY_APP: ${{ matrix.apn-or-fcm == 'APN' }}
+        CURRENT_BRANCH: ${{ github.ref }}
+      run: |
+        # Initialize with the default distribution group
+        distribution_groups=("$ALL_BUILDS_GROUP")
+
+        # Append distribution groups based on branch and context if the app is primary
+        if [[ "$IS_PRIMARY_APP" == "true" ]]; then
+          [[ "$CURRENT_BRANCH" == "refs/heads/feature/"* ]] && distribution_groups+=("$FEATURE_BUILDS_GROUP")
+          [[ "$CURRENT_BRANCH" == "refs/heads/main" ]] && distribution_groups+=("$NEXT_BUILDS_GROUP")
+          [[ "$CURRENT_BRANCH" == "refs/heads/main" ]] && distribution_groups+=("$PUBLIC_BUILDS_GROUP")
+        fi
+
+        # Export the groups as an environment variable
+        echo "firebase_distribution_groups=$(IFS=','; echo "${distribution_groups[*]}")" >> $GITHUB_ENV
+
     - name: Build and upload app build for QA testing 
       uses: ./.github/actions/build-sample-app
       with:
@@ -74,6 +99,7 @@ jobs:
         sample-app: ${{ matrix.sample-app }}
         customerio-workspace-siteid: ${{ secrets[format('CUSTOMERIO_{0}_WORKSPACE_SITE_ID', matrix.apn-or-fcm)] }}
         customerio-workspace-cdp-api-key: ${{ secrets[format('CUSTOMERIO_{0}_WORKSPACE_CDP_API_KEY', matrix.apn-or-fcm)] }}
+        fastlane-build-args: '{"distribution_groups": "${{ env.firebase_distribution_groups }}"}'
         GOOGLE_CLOUD_MATCH_READONLY_SERVICE_ACCOUNT_B64: ${{ secrets.GOOGLE_CLOUD_MATCH_READONLY_SERVICE_ACCOUNT_B64 }}
         FIREBASE_APP_DISTRIBUTION_SERVICE_ACCOUNT_CREDS_B64: ${{ secrets.FIREBASE_APP_DISTRIBUTION_SERVICE_ACCOUNT_CREDS_B64 }}
 
