--- a/.github/actions/build-sample-app/action.yml
+++ b/.github/actions/build-sample-app/action.yml
@@ -76,7 +76,7 @@ runs:
         COMMIT_HASH: ${{ github.event_name == 'pull_request' && github.event.pull_request.head.sha || github.sha }}
       run: |
         make setup_sample_app app=${{ inputs.sample-app }}
-        sd 'buildTimestamp: TimeInterval = .*' 'buildTimestamp: TimeInterval = $(date +%s)' "Apps/${{ inputs.sample-app }}/BuildEnvironment.swift"
+        sd 'buildTimestamp: TimeInterval = .*' "buildTimestamp: TimeInterval = $(date +%s)" "Apps/${{ inputs.sample-app }}/BuildEnvironment.swift"
 
         sd 'cdpApiKey: String = \".*\"' 'cdpApiKey: String = \"${{ inputs.customerio-workspace-cdp-api-key }}\"' "Apps/${{ inputs.sample-app }}/BuildEnvironment.swift"
         sd 'siteId: String = \".*\"' 'siteId: String = \"${{ inputs.customerio-workspace-siteid }}\"' "Apps/${{ inputs.sample-app }}/BuildEnvironment.swift"
